test/tests/stages/18_structures/invalid_types/invalid_member_operators/arrow_pointer_to_non_struct.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  struct
  identifier(s)
  {
  long
  identifier(l)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  double
  identifier(d)
  =
  const double(0.0)
  ;
  double
  *
  identifier(ptr)
  =
  &
  identifier(d)
  ;
  return
  identifier(ptr)
  ->
  identifier(l)
  ;
  }
